--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,23 +5,36 @@
 
 body {
     font-family: Helvetica, sans-serif;
+    background-color: #090e16;
+    color: #ffff;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.flex {
+    display: flex;
 }
 
 nav {
-    border:solid red;
-    display:flex;
+    /* border:solid red;
+    display:flex; */
     /* separa elementos de extremo a extremo */
     justify-content:space-between;
-    background-color: rgba(123, 74, 226, 0.5);
+    align-items: center;
+    background-color: rgba(123, 74, 226, 0.05);
     /* margin-top: 30px;
     margin-left: 80px;
     margin-right: 80px;
     margin-bottom: 30px; */
     margin: 30px;
+    padding: 15px;
+    border-radius: 16px;
 }
 
 .nav-list {
-    border:solid green;
+    /* border:solid green; */
     display:flex;
     list-style: none;
     /* espacio entre cada elemento del contenedor */
@@ -31,4 +44,105 @@ nav {
 .nav-list > li > a{
     text-decoration: none;
     color: #ffff;
+}
+
+.nav-list > li > a:hover {
+    color: rgba(123, 74, 226, 0.5);
+}
+
+main {
+    /* border: solid red; */
+    height: 50vh;
+    /* display: flex; */
+    justify-content: space-between;
+    /* align-items: center; */
+    padding: 30px 80px;
+}
+
+.gretting {
+    background-color: rgba(123, 74, 226, 0.05);
+    color: rgba(123, 74, 226, 0.5);
+    padding: 8px;
+    border-radius: 16px;
+}
+
+.title {
+    font-size: 52px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.description {
+    font-size: 20px;
+    color: rgba(255,255,255,0.5);
+    font-weight: 300;
+    margin-bottom: 20px;
+}
+
+.social-links {
+    display:flex;
+    gap:15px;
+    /* align-items: center; */
+}
+
+.container-profile > img {
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+}
+
+.container-contact {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: end;
+}
+
+.container-contact > a {
+    text-decoration: none;
+    color: rgba(123,74,226,0.5);
+}
+
+.container-contact > a:first-child {
+    /* border: red solid; */
+    display: flex;
+    /* align-items: center; */
+    gap: 5px;
+}
+
+.container-contact > a:last-child {
+    border: rgba(123,74,226,0.5) solid;
+    display: flex;
+    /* align-items: center; */
+    gap: 5px;
+    padding: 5px;
+    border-radius: 16px;
+}
+
+.container-about-me {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 80 px;
+}
+
+.container-about-me > div > img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.mt-20 {
+    margin-top: 20px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.container-about-me > div > h2 {
+    font-size: 48px;
+}
+
+.container-about-me > div > p {
+    color: rgba(255,255,255,0.5);
 }
