--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: "Raleway", sans-serif;
     background-color: #090e16;
     color: #ffff;
 }
@@ -15,6 +15,10 @@ body {
 
 .flex {
     display: flex;
+}
+
+.divider {
+    border: rgba(123, 74, 226, 0.2) solid 0.5px;
 }
 
 nav {
@@ -117,6 +121,69 @@ main {
     gap: 5px;
     padding: 5px;
     border-radius: 16px;
+}
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    /* border: solid red; */
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+
+.container-cards > div {
+    display: flex;
+    border: solid rgba(123, 74, 226, 0.5);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 246px;
+    height: 200px;
+    border-radius: 16px;
+}
+
+.container-cards > div:nth-child(2) {
+    background-color: rgba(123, 74, 226, 0.1);
+    border: none;
+}
+
+.container-cards > div > p {
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+.container-cards > div > h5 {
+    font-size: 32px;
+    margin-top: 10px;
+}
+
+.container-sumary {
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    background-color: rgba(123, 74, 226, 0.5);
+    /* border: solid green; */
+    width: 858px;
+    margin: auto;
+    padding: 20px;
+    margin-bottom: 60px;
+    border-radius: 16px;
+    color: #7b4ae2;
+}
+
+.container-sumary > div > p:first-child {
+    font-weight: 300;
+}
+
+.container-sumary > div > p:last-child {
+    font-weight: bold;
+    font-size: 32px;
+}
+
+.container-sumary > div {
+    width: 246px;
+    text-align: center;
 }
 
 .container-about-me {
